# crts

./: .clang_complete  .gitignore  .gitmodules  .muon  LICENSE  README.md  TODO  meson.build  meson_options.txt  readme.md  test.c
assets/: envypn7x15.bdf  meson.build  water.tga
assets/bundle_manifest/: meson.build
assets/cfg/: curses.ini  graphics.ini  keymap-simple.ini  keymap.ini  opengl.ini  worldgen.ini
assets/shaders/: basic.frag  chunk_bottoms.vert  chunks.vert  chunks_depth.vert  final_quad.frag  final_quad.vert  instanced_model.in.vert  instanced_model.vert  instanced_model_depth.vert  meson.build  points.vert  selection.vert  shapes.vert  terragen_mesh.frag  terragen_mesh.vert  terragen_pixels.frag  terragen_pixels.vert  text.frag  text.vert  water.frag  water.vert  world.frag  world.in.frag
build_util/: embed_binary.c  fpack.c  meson.build
build_util/pkg/: meson.build
build_util/pkg/macos/: Info.plist  launcher  make_app  make_icns  meson.build
build_util/pkg/unix/: meson.build
build_util/pkg/windows/: make_windows  meson.build
build_util/scripts/: download  export_manifest  file_exists  makecygwin  makemacos  upload  version  zip
client/: assets.c  client.c  cmdline.c  draw.c  graphics.c  handle_msg.c  hiface.c  input_cfg.c  input_handler.c  main.c  meson.build  net.c  opts.c  request_missing_chunks.c  world_update.c
client/cfg/: cfg.c  common.c  graphics.c  keymap.c  opengl.c
client/display/: attr.c  container.c  info.c  painters.c  window.c  world.c
client/input/: action_handler.c  cmdline.c  debug.c  handler.c  helpers.c  keymap.c  mouse.c  move_handler.c
client/net/: receive.c  respond.c  server_cx.c
client/src/: display.c  display.h  draw.c  draw.h  drawers.c  drawers.h  hiface.c  hiface.h  main.c  net.c  net.h  request_missing_chunks.c  request_missing_chunks.h  sim.h  state.c  state.h  window.c  window.h  world_update.c  world_update.h
client/src/cfg/: keymap.c
client/src/display/: container.c  container.h  display.c  display.h  painters.c  painters.h  window.c  window.h
client/src/input/: action_handler.c  action_handler.h  handler.c  handler.h  keycmd.h  keycodes.h  move_handler.c  move_handler.h
client/src/net/: receive.c  receive.h  respond.c  respond.h  server_cx.c  server_cx.h
client/ui/: common.c
client/ui/gl/: cmdline.c  colors.c  globals.c  input.c  render.c  shader.c  shader_multi_obj.c  ui.c
client/ui/ncurses/: container.c  graphics.c  graphics_cfg.c  info.c  ui.c  window.c  world.c
client/ui/opengl/: cmdline.c  color_cfg.c  colors.c  globals.c  hud.c  input.c  keymap_hook.c  obj_loader.c  render.c  render_world.c  shader.c  shader_multi_obj.c  solids.c  text.c  tgaloader.c  ui.c  util.c  window.c  winutil.c
client/ui/term/: graphics.c  graphics_cfg.c  info.c  ui.c  world.c
genworld/: gen.c  gl.c  main.c  meson.build  opts.c  render_terrain.c  terrain.vert  worker.c
launcher/: assets.c  launcher.c  meson.build  opts.c  save_settings.c  ui.c
pkg/macos/: Info.plist  launcher  meson.build
server/: aggregate_msgs.c  api.c  handle_msg.c  main.c  meson.build  net.c  opts.c  server.c  traps.c
server/net/: connection.c  pool.c  receive.c  respond.c  server.c
server/sim/: action.c  ai.c  do_action.c  ent.c  ent_buckets.c  ent_lookup.c  environment.c  gen_terrain.c  sim.c  storehouse.c  terrain.c  update_tile.c  worker.c
server/sim/do_action/: build.c  carry.c  dismount.c  fight.c  harvest.c  mount.c  move.c
server/sim/pathfind/: heap.c  mapping.c  meander.c  pathfind.c  pg_node.c  pgraph.c  vector_field.c
server/src/: handle_msg.c  handle_msg.h  main.c  net.c  net.h  opts.c  opts.h  sim.c  sim.h  terrain.c  terrain.h  traps.c  traps.h
server/src/net/: connection.c  connection.h  pool.c  pool.h  receive.c  receive.h  respond.c  respond.h  server.c  server.h  wrapped_message.h
server/src/sim/: pathfind.c  pathfind.h  sim.c  sim.h  terrain.c  terrain.h
server/worldgen/: gen.c  opts.c
shared/: action.c  action.h  alignment.c  alignment.h  chunk.c  chunk.h  geom.c  geom.h  globals.c  globals.h  hash.c  hash.h  log.h  meson.build  perlin.c  perlin.h  port.h  queue.c  queue.h  serialize.c  serialize.h  update.c  update.h  version.c.in  world.c  world.h
shared/constants/: action_info.c  action_info.h  blueprints.c  globals.c  tile_chars.c  tile_chars.h
shared/math/: delaunay.c  geom.c  geom.h  hash.c  kernel_filter.c  linalg.c  perlin.c  perlin.h  rand.c  triangle.c  trigraph.c
shared/messaging/: client_message.c  client_message.h  server_message.c  server_message.h
shared/msgr/: msgr.c
shared/msgr/transport/: basic.c  (+1 more)
shared/net/: ack.c  bind_sock.c  connection.c  defs.c  inet_aton.c  msg_queue.c  net_ctx.c  pool.c  recv_msgs.c  send_msgs.c
shared/opengl/: input.c  menu.c  shader.c  util.c  window.c
shared/pathfind/: abstract.c  api.c  local.c  meander.c  pathfind.c  pg_node.c  pgraph.c  preprocess.c
shared/serialize/: base.c  base.h  byte_swappers.c  chunk.c  client_message.c  client_message.h  coder.c  geom.c  geom.h  message.c  misc.c  net.c  server_message.c  server_message.h  sim.c  sim.h  to_disk.c  world.c
shared/sim/: action.c  action.h  alignment.c  chunk.c  chunk.h  ent.c  ent.h  ent_buckets.c  ent_partition.c  tiles.c  world.c  world.h
shared/sound/: core.c  setup.c  sound.c
shared/types/: bheap.c  darr.c  hash.c  hash.h  hdarr.c  queue.c  queue.h  ring_buffer.c  sack.c
shared/util/: assets.c  inih.c  log.c  log.h  mem.c  mem.h  text.c  time.c  time.h  timer.c  util.c
terragen/: assets.c  main.c  meson.build  opts.c  terragen.c
terragen/opengl/: ui.c  worker.c
test/: acker.c  blur.c  hash.c  hdarr.c  heap.c  inih.c  meson.build  path.c  random.c  readlines.c  save.c  shrink.c  snap.c  terrain.c
test/bench/: hash.c  meson.build  path_local.c
test/src/: cereal.c  hashy.c  path.c  terra.c
tests/: blur.c  hash.c  hdarr.c  heap.c  inih.c  meson.build  message_sack.c  path.c  path_local.c  random.c  readlines.c  rudp.c  sack.c  save.c  shrink.c  snap.c
tests/bench/: hash.c  meson.build
util/: embed_binary.c  fpack.c  launcher.c  meson.build  snap.c
(+403 files in other folders)
