option('static', type: 'boolean', value: true,
	description: 'try to link dependencies statically')
option('embed-assets', type: 'boolean', value: true,
	description: 'embed assets into binary')
option('subcmd-dir', type: 'string', value: 'libexec/crts')

option('ncurses-ui', type: 'feature', value: 'auto',
	description: 'ncurses ui')
option('opengl-ui', type: 'boolean', value: true,
	description: 'opengl ui')

option('build-tests', type: 'boolean', value: false,
	description: 'build tests')
option('build-server', type: 'boolean', value: true,
	description: 'build server')
option('build-client', type: 'boolean', value: true,
	description: 'build client')
option('build-terragen', type: 'boolean', value: false,
	description: 'build terragen')
option('build-extras', type: 'boolean', value: false,
	description: 'build extra tools')
option('build-launcher', type: 'boolean', value: true,
	description: 'build crts launcher')

option('enable-tracy', type: 'boolean', value: false,
	description: 'enable tracy profiler integration')
option('tracy-dir', type: 'string', value: '',
	description: 'location of tracy profiler checkout')

option('build-macos-app', type: 'boolean', value: false,
	description: 'build a macos .app package')
