option('uis', type: 'array',
	choices: ['curses', 'opengl'],
	value: ['curses', 'opengl'])

option('targets', type: 'array',
	choices: ['tests', 'server', 'client', 'terragen', 'website'],
	value: ['server', 'client', 'terragen'])

option('packaging', type: 'combo',
	choices: ['unix', 'macos'],
	value: 'unix',
	description: 'set packaging mode')

option('embed_assets', type: 'boolean', value: true,
	description: 'embed assets into binary')

option('website_dest', type: 'string', value: '')

option('tracy', type: 'boolean', value: false,
	description: 'enable tracy profiler integration')
option('tracy_dir', type: 'string', value: '',
	description: 'location of tracy profiler checkout')

option('static', type: 'boolean', value: true,
	description: 'try to link dependencies statically')

option('upload', type: 'boolean', value: false,
	description: 'upload distribution files (used for CI)')
